added full website

--- a/index.html
+++ b/index.html
@@ -8,18 +8,74 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     <section class="top-banner">
-            <div class="half-width">
-                <h1>Hello I'M Webdeveloper</h1>
-                <h3><span class="name-highlight">Robin Alam</span></h3>
-                <p> I am a Professional website Developer. I am the right Person for WordPress, Bug-fixing, wp-migration </p>
+        <section class="top-banner">
+                <div class="half-width">
+                    <h1>Hello I'M Webdeveloper</h1>
+                    <h3><span class="name-highlight">Robin Alam</span></h3>
+                    <p> I am a Professional website Developer. I am the right Person for WordPress, Bug-fixing, wp-migration </p>
+                    <a class="link-button"href="#">Hire Me</a>
+                </div>
+                <div class="half-width">
+                <img src="images/peter.png" alt="">
+                </div>
+        </section>
+        <section class="body-banner">
+                <div class="half-width">
+                    <img src="images/peter_dream.png" alt="">
+                </div>
+                <div class="half-width">
+                    <h1>Biography</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ab quas tempora fugit ut vel pariatur vitae cumque modi cupiditate.</p>
+                    <a href="#" class="link-button">DOWNLOAD CV</a>
+                    </div>
+                </div>
+        </section>
+        <section>
+                <div class="latest-work">
+                    <h2>My Latest Work</h2>
+                </div>
+                <div class="half-width">
+                    <img src="images/latest-work/work-1.png" alt="">
+                </div>
+                <div class="half-width">
+                    <img src="images/latest-work/work-2.jpg" alt="">
+                </div>
+                <div class="half-width">
+                    <img src="images/latest-work/work-3.jpg" alt="">
+                </div>
+        </section>
+        <section class="fotter-image">
+            <div class="client">
+                <h2>What Client are Say</h2>
             </div>
-            <div class="half-width">
-              <img src="images/peter.png" alt="">
+            <div class="web-name">
+                <h5>Unique Developer</h5>
+                 <p>Company Ltd</p>
             </div>
-     </section>
-    
+            <div class="tag">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita quasi doloremque repudiandae aperiam quae dolorem hic est sunt atque doloribus?</p>
+            </div>
+            <div class="big-button">
+                <a href="https://twitter.com/home" class="message">leaves a message robinalam1988@gmail.com</a>
+            </div>
+            </div>
+            </section>
+            <footer>
+                <p>robin_alam &copy; All right reserved</p>
+            </footer>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
